# figma2sprout

./: Cargo.toml  demo.json  rustfmt.toml
src/: figma_api.rs  main.rs  mod.rs
src/schema/: component_property.rs  file.rs  mod.rs  node.rs
src/ui/: tree.rs
