[package]
name = "figma2sprout"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["advanced", "debug", "svg", "tokio"] }
iced_widget = { version = "0.13.4", features = ["advanced", "lazy"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
